--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="overlay text-white text-center">
             <h1 class="display-2 font-weight-bold my-3">Postres Yoyis</h1>
             <h2 class="display-4 mb-5">Desde 2020</h2>
-            <a class="btn btn-lg btn-primary" href="#gallary">Nuestros Productos</a>
+            <a class="btn btn-lg btn-primary" href="#nuestros">Nuestros Productos</a>
         </div>
     </header>
 
